# FinalSiren

./: Cargo.toml  wrangler.toml
.github/workflows/: cf.yml  main.yml
web/: link.html  sub.html
web/js/: link.js  sub.js
